# wifi_registration_service

./: docker-compose.yml
docker/postgres/: init.sql
otp_frontend/: Dockerfile  index.html  package-lock.json  package.json
otp_frontend/src/: App.tsx  main.tsx  styles.css
otp_frontend/src/api/: otp.ts
otp_frontend/src/pages/: AuthPage.tsx
otp_verif_serv/: .env  Cargo.toml  Dockerfile  README.md
otp_verif_serv/src/: main.rs
otp_verif_serv/src/app/: mod.rs
otp_verif_serv/src/app/adapters/: mod.rs  rabbitmq_producer.rs
otp_verif_serv/src/app/command/: add_user.rs
otp_verif_serv/src/app/query/otp/: get_otp.rs  mod.rs  verify_otp.rs
otp_verif_serv/src/di/: mod.rs
otp_verif_serv/src/domain/: otp.rs
otp_verif_serv/src/ports/: mod.rs
otp_verif_serv/src/ports/httpapi/: server.rs
otp_verif_serv/src/storage/: inmemory.rs  mod.rs  postgres.rs  repository.rs
sms_sender/: .env  .gitattributes  Cargo.toml  Dockerfile
sms_sender/src/: container.rs  event_queue.rs  main.rs
sms_sender/src/app/: mod.rs
sms_sender/src/app/adapters/: mod.rs  postgres.rs  rabbitmq.rs  sms.rs
sms_sender/src/app/command/: mod.rs  send_code.rs
sms_sender/src/app/query/: get_event.rs  mod.rs
wifi_access_service/: .env  Cargo.toml  Dockerfile
wifi_access_service/src/: container.rs  event_queue.rs  main.rs
wifi_access_service/src/app/: mod.rs
wifi_access_service/src/app/adapters/: rabbitmq.rs
wifi_access_service/src/app/command/: add_user_to_wifi.rs  mod.rs
wifi_access_service/src/app/query/: get_event.rs  mod.rs
