[package]
name = "wifi_access_service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
futures = "0.3.31"
futures-util = "0.3.31"
lapin = "3.7.2"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
